<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.chari.ic.todoapp.ToDoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:background="@color/white"
        tools:context=".fragments.update_fragment.UpdateFragment">

        <EditText
            android:id="@+id/current_title_editText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:focusable="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/title"
            setTaskToUpdate="@{viewmodel.taskToUpdate}"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

        <com.google.android.material.chip.Chip
            android:id="@+id/current_due_date_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_title_editText"
            setTaskToUpdate="@{viewmodel.taskToUpdate}"
            android:textSize="16sp"
            app:chipIcon="@drawable/ic_baseline_today_24"/>


        <Spinner
            android:id="@+id/current_priority_spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:entries="@array/priorities"
            setTaskToUpdate="@{viewmodel.taskToUpdate}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_due_date_chip" />

        <EditText
            android:id="@+id/current_description_editText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="16dp"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/add_description"
            setTaskToUpdate="@{viewmodel.taskToUpdate}"
            android:background="@drawable/custom_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_priority_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>