<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.chari.ic.todoapp.fragments.tasks_fragment.TasksFragment"
        android:label="@string/todo_list"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_tasksFragment_to_updateFragment"
            app:destination="@id/updateFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
    </fragment>
    <fragment
...
